style.css
* {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;

}

body {
  margin: 0;
  inset: 0;
  background: url("img/background_1.jpg") center no-repeat;
  backdrop-filter: blur(12px);
}

.center-box {
    display: flex;
    flex-direction: column;
  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
  text-align: center;
    margin-left: 10%;
    margin-right: 10%;
    margin-top: -0%;
  background: url("img/background_1.jpg") center/cover no-repeat;
    z-index: -1;
    width: 80%;
    height: 80%;
    border-radius: 10px;


}

.headingBox {
    margin-top: 15%;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.mySubtitle {
    color: aliceblue;
    font-size: 28px;
    letter-spacing: 20px;
    text-align: center;
    text-transform: uppercase;  

}

.myHeading {
    flex-direction: column;
    font-size: 100px;
    letter-spacing: 1px;
    color: aliceblue;
    text-align: center;
    display: flex;
    overflow-wrap: break-word;
}

ul {
    list-style: none;
}

div.nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: auto;
}
nav {
    box-shadow: 3px 3px 5px rgba(107, 133, 160, 0.4);
    background-color: antiquewhite;
    opacity: 50%;
    border-radius: 15px;
    transition: 200ms;
    height: 80px;
    margin-bottom: 20px;
}

nav:hover {
    opacity: 100%;
}


nav ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
    margin: 0;
    padding:0;
}


nav li img {
    height: 80px;
    width: auto;
    border-radius: 15px;
}

nav li {
    display: flex;
    height: 80px;
    align-items: end;
}

nav a {
    display: flex;
    align-items: center;
    height: 100%;
    color: rgb(0, 0, 0);
    font-size: larger;
    padding: 0px 20px;
    text-decoration: none;
    transition:300ms;
}

nav a:hover {
    background-color: rgb(236, 203, 160);
    color: black;

    padding: 0px 50px;
    
}

div.social-button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex: 1;
    align-items: center;
}

#linkedin {
    width: 100px;
    height: 100px;
    transition: 200ms;
}

#linkedin:hover {
    transform: translateY(-10px);
}



/* contact page*/
body.contacts {
    background: url(img/background_2.jpg) repeat center;
    background-size: cover;
    background-attachment: fixed;
    margin: 0px;
    display: flex;
    flex-direction: column;
}

form.contacts {
    flex-direction: column;
    font-weight: 500;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-family: var(--font-secondary);
    margin-bottom: 14px;
    text-align: left;
    display: block;
}

div.contacts {
    box-sizing: border-box;
    width: 50%;
    min-width: 400px;
    margin: 30px auto;
    padding: 20px;
    border-radius: 15px;
    background-color: rgba(245, 216, 203);
    color: rgb(0, 0, 0);
    box-shadow: 3px 3px 5px rgba(83, 103, 124, 0.4);

}

div.form-group {
    padding: 0px 15px;
}

#other-group {
    display: none;
}

label {
    display: block;
    margin-bottom: 6px;
}

input.contacts, select.contacts, textarea.contacts {
    height: 50px;
    width: 100%;
    border-radius: 15px;
    border: none;
    margin-bottom: 15px;
    text-indent: 5px;
}

textarea.contacts {
    height: 100px;
    width: 100%;
}

#submit {
    background-color: rgb(176, 226, 255);
    font-weight: bold;
    margin-top: 15px;
    transition: 200ms;
}

#submit:hover {
    background-color: rgb(27, 31, 34);
    color: rgb(176, 226, 255);
    transition: 200ms;
    transform: translateY(-10px);
}



.alert {
    height: fit-content;
    padding: 20px;
    margin: 20px auto;
    width: fit-content;
    border-radius: 50px;
    color: rgb(0, 0, 0);
    box-shadow: 3px 3px 5px rgba(83, 103, 124, 0.4);

    font-weight: 500;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-family: var(--font-secondary);
    font-size: 25px;
    text-align: center;

}

.alert-info {
    background-color: rgb(176, 226, 255);
}

.alert-failure {
    background-color: rgb(255, 176, 176);
}

.alert-success {
    background-color: rgb(176, 255, 181);
}


/* About me page */

body.about {
  margin: 0;
  inset: 0;
  background: url("img/background_3.jpg") center repeat;
}

.mySubtext {
    color: rgb(240, 248, 255);
    font-size: 28px;
    letter-spacing: 1px;
    text-align: center;
}

.aboutMe {
    text-align: center;
    display: flex;
    flex-direction: column;
    margin-top: 100px;
}

.bubble {
    background-color: aliceblue;
    color: rgb(14, 16, 24);
    opacity: 70%;
    border-radius: 50px;
    margin-top: 100px;
    transition: 200ms;
}

.bubble:hover {
    opacity: 100%;
}


.boxes {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin-bottom: 20px;
    align-items:end;
    flex: 1;
}

.box {
    width: 400px;
    height: 400px;
    padding: 20px;
    border-radius: 10px;
    background-color: rgb(187, 198, 198);
    opacity: 75%;
}


img.icons {
    height: 300px;
    width: auto;
    margin: auto;
    background-color: aliceblue;
    border-radius: 20px;
    padding: 20px;
}

div.icons, div.artwork {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 50px;
}

#dark-frame {
    border: 20px solid rgb(29, 56, 81);
}

img.artwork {
    height: fit-content;
    width: 100%;
    margin: auto;
    border: 20px solid aliceblue;
    border-radius: 20px;
    transition: transform 0.5s;
  transform: translateZ(0);


}

/* img.artwork:hover {
    position: fixed;
    transform: translate(0,-10%);
    object-fit: contain;
    z-index: 999;
    max-width: 80vw; max-height: 80vh;
    height: auto; width: auto;
    transition: 300ms;
} */

img.artwork:hover {
  z-index: 1;
  transform: translateZ(0) scale(1.1);
}


@keyframes colorChange {
  0% { filter: hue-rotate(0deg); }
  100% { filter: hue-rotate(360deg); }
}

img.icons {
  animation: colorChange 5s infinite linear;
}

div.description {
    color: rgb(0, 0, 0);
    font-size: 28px;
    letter-spacing: 1px;
    text-align: center;
    text-transform: uppercase;  

    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-right: 28px;
    padding-top: 16px;
}

li.description {
    margin-bottom: 20px;
}


/* Projects page */
body.projects {
    background: url(img/background_4.jpg) repeat center;
    background-size: cover;
    background-attachment: fixed;
    margin: 0px;
    display: flex;
    flex-direction: column;
}

